# python_package_template

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  pyproject.toml
.github/workflows/: rename.yml
scripts/: create_notebook.sh
